# src/wupsxx/Makefile.am

AM_CPPFLAGS = $(DEVKITPRO_CPPFLAGS)

AM_CXXFLAGS = \
	$(DEVKITPRO_CFLAGS) \
	-Wall -Werror


noinst_LIBRARIES = libwupsxx.a


libwupsxx_a_SOURCES = \
	bool_item.cpp bool_item.hpp		\
	category.cpp category.hpp		\
	color.cpp color.hpp 			\
	color_item.cpp color_item.hpp 		\
	duration.cpp duration.hpp 		\
	config_error.cpp config_error.hpp	\
	duration_items.cpp duration_items.hpp	\
	int_item.cpp int_item.hpp		\
	item.cpp item.hpp			\
	numeric_item.hpp numeric_item_impl.hpp	\
	storage.cpp storage.hpp			\
	storage_error.cpp storage_error.hpp	\
	text_item.cpp text_item.hpp		\
	var_watch.hpp
